# HostsManager

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  com.github.bbuhler.hostsmanager.yml  meson.build
.github/workflows/: main.yml
data/: HostsManager.desktop  HostsManager.pkexec.policy  com.github.bbuhler.HostsManager.appdata.xml  com.github.bbuhler.HostsManager.appdata.xml.in  com.github.bbuhler.HostsManager.desktop  com.github.bbuhler.HostsManager.pkexec.policy  com.github.bbuhler.hostsmanager.appdata.xml.in  com.github.bbuhler.hostsmanager.desktop.in  com.github.bbuhler.hostsmanager.pkexec.policy  com.github.bbuhler.hostsmanager.pkexec.policy.in  meson.build
debian/: changelog  control  copyright  rules
po/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.bbuhler.HostsManager.pot  com.github.bbuhler.hostsmanager.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+158 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+157 more)
src/: HostsManager-pkexec.vala  HostsManager.vala  app.vala
src/Services/: Config.vala  HostsFile.vala  HostsRegex.vala
src/Widgets/: IconButton.vala  TreeView.vala
